--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
             animation: {
               'fade-in': 'fadeIn 0.5s ease-in-out',
               'slide-in-up': 'slideInUp 0.5s ease-out',
+              'pop-in': 'popIn 0.3s ease-out',
               'gradient-animation': 'gradient-animation 15s ease infinite',
               'flow-line': 'flow-line 5s linear infinite',
               'glow': 'glow 2s ease-in-out infinite alternate',
@@ -41,6 +42,10 @@
               slideInUp: {
                 '0%': { transform: 'translateY(20px)', opacity: '0' },
                 '100%': { transform: 'translateY(0)', opacity: '1' },
+              },
+              popIn: {
+                '0%': { transform: 'scale(0.95)', opacity: '0' },
+                '100%': { transform: 'scale(1)', opacity: '1' },
               },
               'gradient-animation': {
                 '0%': { 'background-position': '0% 50%' },
@@ -68,7 +73,8 @@
     "react/": "https://esm.sh/react@^19.1.1/",
     "@google/genai": "https://esm.sh/@google/genai@^1.14.0",
     "lucide-react": "https://esm.sh/lucide-react@^0.539.0",
-    "html-to-image": "https://esm.sh/html-to-image@^1.11.11"
+    "html-to-image": "https://esm.sh/html-to-image@^1.11.11",
+    "react-qr-code": "https://esm.sh/react-qr-code@^2.0.12"
   }
 }
 </script>
