--- a/index.html
+++ b/index.html
@@ -73,12 +73,16 @@
 <script type="importmap">
 {
   "imports": {
-    "react": "https://esm.sh/react@^19.1.1",
-    "react-dom/": "https://esm.sh/react-dom@^19.1.1/",
-    "react/": "https://esm.sh/react@^19.1.1/",
-    "lucide-react": "https://esm.sh/lucide-react@^0.539.0",
-    "html-to-image": "https://esm.sh/html-to-image@^1.11.11",
-    "react-qr-code": "https://esm.sh/react-qr-code@^2.0.12"
+    "react": "https://esm.sh/react@18.3.1",
+    "react/": "https://esm.sh/react@18.3.1/",
+    "react/jsx-runtime": "https://esm.sh/react@18.3.1/jsx-runtime",
+    "react-dom": "https://esm.sh/react-dom@18.3.1",
+    "react-dom/": "https://esm.sh/react-dom@18.3.1/",
+    "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
+    
+    "lucide-react": "https://esm.sh/lucide-react@0.539.0?deps=react@18.3.1",
+    "html-to-image": "https://esm.sh/html-to-image@1.11.11",
+    "react-qr-code": "https://esm.sh/react-qr-code@2.0.12?deps=react@18.3.1"
   }
 }
 </script>
