feat: Rebrand to Nexus Capital and update core concepts
This commit rebrands the application from "Realty Guilds" to "Nexus Capital".
It reflects the shift in core gameplay mechanics from real estate to startup investment.
Key changes include:
- Updating the application name and description.
- Renaming internal types and components to align with the new theme (e.g., Tycoon -> Partner, ProjectNode -> StartupNode, Guild -> Syndicate).
- Adjusting UI elements and color schemes to a more tech-focused aesthetic.
- Modifying data structures to accommodate new game mechanics related to startup portfolios and investment rounds.
- Updating references in constants and services to reflect the new terminology.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Realty Guilds</title>
+    <title>Nexus Capital</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <script src="https://cdn.tailwindcss.com"></script>
@@ -15,16 +15,16 @@
               sans: ['Inter', 'sans-serif'],
             },
             colors: {
-              'brand-primary': '#7c3aed',
-              'brand-secondary': '#a78bfa',
-              'brand-accent': '#c4b5fd',
-              'dark-900': '#0f172a',
+              'brand-primary': '#0ea5e9', // Tech Blue (sky-500)
+              'brand-secondary': '#38bdf8', // Lighter Tech Blue (sky-400)
+              'brand-accent': '#2dd4bf', // Teal accent (teal-400)
+              'dark-900': '#0f172a', // Graphite Dark
               'dark-800': '#1e293b',
               'dark-700': '#334155',
               'dark-600': '#475569',
               'accent-cyan': '#22d3ee',
-              'accent-gold': '#facc15',
-              'accent-glow': '#7c3aed',
+              'accent-green': '#10b981', // For profit/success (emerald-500)
+              'accent-glow': '#0ea5e9',
             },
             animation: {
               'fade-in': 'fadeIn 0.5s ease-in-out',
@@ -68,16 +68,16 @@
                 'to': { 'stroke-dashoffset': '100' },
               },
               glow: {
-                'from': { 'box-shadow': '0 0 5px -5px #a78bfa' },
-                'to': { 'box-shadow': '0 0 20px 5px #a78bfa' },
+                'from': { 'box-shadow': '0 0 5px -5px #38bdf8' },
+                'to': { 'box-shadow': '0 0 20px 5px #38bdf8' },
               },
               cardGlow: {
-                'from': { 'border-color': 'rgba(124, 58, 237, 0.3)', 'box-shadow': '0 0 5px rgba(124, 58, 237, 0.2)' },
-                'to': { 'border-color': 'rgba(124, 58, 237, 0.7)', 'box-shadow': '0 0 20px rgba(124, 58, 237, 0.5)' },
+                'from': { 'border-color': 'rgba(14, 165, 233, 0.3)', 'box-shadow': '0 0 5px rgba(14, 165, 233, 0.2)' },
+                'to': { 'border-color': 'rgba(14, 165, 233, 0.7)', 'box-shadow': '0 0 20px rgba(14, 165, 233, 0.5)' },
               },
               textGlow: {
-                'from': { 'text-shadow': '0 0 10px rgba(74, 222, 128, 0.4), 0 0 20px rgba(74, 222, 128, 0.2)' },
-                'to': { 'text-shadow': '0 0 20px rgba(74, 222, 128, 0.6), 0 0 30px rgba(74, 222, 128, 0.4)' },
+                'from': { 'text-shadow': '0 0 10px rgba(16, 185, 129, 0.4), 0 0 20px rgba(16, 185, 129, 0.2)' },
+                'to': { 'text-shadow': '0 0 20px rgba(16, 185, 129, 0.6), 0 0 30px rgba(16, 185, 129, 0.4)' },
               },
               messageIn: {
                  '0%': { opacity: '0', transform: 'translateY(10px) scale(0.95)' },
