feat: Introduce Recharts and enhance UX
Adds Recharts for improved data visualization capabilities.
Introduces new `accent-gold` color for enhanced UI theming.
Updates types and constants to support new features and existing ones.
Adds `AssistantWidget` and `TheBoardroomView` components, hinting at future functionality.
Removes unused `MarketingGenius` import.
Refactors FAQ data for better organization and clarity.

--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
               'accent-cyan': '#22d3ee',
               'accent-green': '#10b981', // For profit/success (emerald-500)
               'accent-glow': '#0ea5e9',
+              'accent-gold': '#f59e0b', // amber-500
             },
             animation: {
               'fade-in': 'fadeIn 0.5s ease-in-out',
@@ -129,7 +130,8 @@
     
     "lucide-react": "https://esm.sh/lucide-react@0.539.0?deps=react@18.3.1",
     "html-to-image": "https://esm.sh/html-to-image@1.11.11",
-    "react-qr-code": "https://esm.sh/react-qr-code@2.0.12?deps=react@18.3.1"
+    "react-qr-code": "https://esm.sh/react-qr-code@2.0.12?deps=react@18.3.1",
+    "recharts": "https://esm.sh/recharts@2.12.7?deps=react@18.3.1,react-dom@18.3.1"
   }
 }
 </script>
