feat: Add axios and initial api service
Integrates axios for API requests and sets up a basic api service structure with mock data.

--- a/index.html
+++ b/index.html
@@ -127,11 +127,11 @@
     "react-dom": "https://esm.sh/react-dom@18.3.1",
     "react-dom/": "https://esm.sh/react-dom@18.3.1/",
     "react-dom/client": "https://esm.sh/react-dom@18.3.1/client",
-    
     "lucide-react": "https://esm.sh/lucide-react@0.539.0?deps=react@18.3.1",
     "html-to-image": "https://esm.sh/html-to-image@1.11.11",
     "react-qr-code": "https://esm.sh/react-qr-code@2.0.12?deps=react@18.3.1",
-    "recharts": "https://esm.sh/recharts@2.12.7?deps=react@18.3.1,react-dom@18.3.1"
+    "recharts": "https://esm.sh/recharts@2.12.7?deps=react@18.3.1,react-dom@18.3.1",
+    "axios": "https://esm.sh/axios@^1.11.0"
   }
 }
 </script>
